examples/test/testpolicy9863.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9863
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key6: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value28
          key6: value28
      podSelector:
        matchLabels:
          key7: value9
          key21: value26
